[fix] header element visible before animation.

--- a/app/assets/styles/layout/_header.css
+++ b/app/assets/styles/layout/_header.css
@@ -25,6 +25,7 @@
 
     @mixin atLarge {
       font-size: 1.8rem;
+      opacity: 0;
     }
   }
   &__add {
@@ -43,6 +44,10 @@
     @mixin atLarge {
       transform: translateY(10px);
     }
+
+    li {
+      opacity: 0;
+    }
   }
   &__availability-message {
     position: absolute;
@@ -54,6 +59,10 @@
       bottom: 0;
       left: 30vw;
       transform: translate(-100%, 50%);
+    }
+
+    li {
+      opacity: 0;
     }
   }
   &__nav {
